--- a/Geeks Who Drank/en.lproj/MainStoryboard.storyboard
+++ b/Geeks Who Drank/en.lproj/MainStoryboard.storyboard
@@ -13,27 +13,14 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="2q1-MF-gQJ">
-                                <rect key="frame" x="20" y="165" width="280" height="56"/>
+                                <rect key="frame" x="20" y="202" width="280" height="56"/>
                                 <fontDescription key="fontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="28"/>
                                 <state key="normal" title="Start Quizzin!">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="hostAQuizPressed:" destination="2" eventType="touchUpInside" id="Jao-JM-Sch"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="g1I-EW-8RY">
-                                <rect key="frame" x="20" y="285" width="280" height="61"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="27"/>
-                                <state key="normal" title="Upload a Quiz">
-                                    <color key="titleColor" red="0.0" green="0.25098040699958801" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="uploadAQuizPressed:" destination="2" eventType="touchUpInside" id="QNa-go-x8A"/>
-                                    <segue destination="3P2-ws-jPg" kind="modal" identifier="uploadQuizSegue" id="3o6-f5-fmk"/>
+                                    <action selector="startQuizzinPressed:" destination="2" eventType="touchUpInside" id="o8a-rf-4jf"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -41,8 +28,8 @@
                     </view>
                     <connections>
                         <outlet property="quizButton" destination="2q1-MF-gQJ" id="vtX-ar-fWJ"/>
-                        <outlet property="uploadButton" destination="g1I-EW-8RY" id="Cbx-k7-JaG"/>
-                        <segue destination="Xre-WA-XEP" kind="modal" identifier="hostAQuizSegue" id="EaS-J8-qVD"/>
+                        <segue destination="Xre-WA-XEP" kind="modal" identifier="newEventSegue" id="EaS-J8-qVD"/>
+                        <segue destination="3P2-ws-jPg" kind="modal" identifier="eventListSegue" id="8xT-Tb-1fC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -62,7 +49,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="uploadQuizCell" id="aba-1z-S3R" customClass="UploadQuizCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="uploadQuizCell" id="aba-1z-S3R" customClass="EventCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -89,6 +76,7 @@
                                         <connections>
                                             <outlet property="dateLabel" destination="OCh-o8-ZSF" id="pGk-4o-mHz"/>
                                             <outlet property="locationLabel" destination="bTG-bK-kQT" id="PEJ-Re-X9N"/>
+                                            <segue destination="Xre-WA-XEP" kind="modal" identifier="editQuizSegue" id="vB0-Et-YWo"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -125,7 +113,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uqd-V5-vM7" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Das-0y-bwX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="271" y="-1212"/>
+            <point key="canvasLocation" x="-269" y="-792"/>
         </scene>
         <!--Quiz List View Controller-->
         <scene sceneID="ygQ-ui-4cC">
@@ -249,7 +237,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zdr-yX-ihB" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="uWU-o3-YJj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-269" y="-792"/>
+            <point key="canvasLocation" x="271" y="-1212"/>
         </scene>
         <!--Quiz Detail View Controller-->
         <scene sceneID="rFF-Ti-Q9f">
@@ -448,7 +436,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="689" y="-792"/>
+            <point key="canvasLocation" x="811" y="-1212"/>
         </scene>
         <!--Round Detail View Controller-->
         <scene sceneID="nli-Bd-fTW">
@@ -860,7 +848,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1236" y="-792"/>
+            <point key="canvasLocation" x="1358" y="-1212"/>
         </scene>
         <!--Create Team View Controller-->
         <scene sceneID="djr-dk-Lvp">
@@ -931,7 +919,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YbC-Zz-rRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="9sz-ez-Nby" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="271" y="-496"/>
+            <point key="canvasLocation" x="811" y="-602"/>
         </scene>
     </scenes>
     <classes>
@@ -939,6 +927,13 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CreateTeamViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="teamNameInput" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="EventCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="locationLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="EventListViewController" superclassName="UIViewController">
@@ -951,7 +946,7 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/HomeScreenViewController.h"/>
             <relationships>
                 <relationship kind="action" name="backToInitialView:" candidateClass="UIStoryboardSegue"/>
-                <relationship kind="action" name="hostAQuizPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="startQuizzinPressed:" candidateClass="UIButton"/>
                 <relationship kind="action" name="uploadAQuizPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="quizButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="uploadButton" candidateClass="UIButton"/>
@@ -1008,17 +1003,13 @@
         <class className="UIStoryboardSegue" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UIStoryboardSegue.h"/>
         </class>
-        <class className="UploadQuizCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UploadQuizCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="locationLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="vB0-Et-YWo"/>
+    </inferredMetricsTieBreakers>
 </document>
