--- a/Geeks Who Drank/en.lproj/MainStoryboard.storyboard
+++ b/Geeks Who Drank/en.lproj/MainStoryboard.storyboard
@@ -49,7 +49,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="uploadQuizCell" id="aba-1z-S3R" customClass="EventCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="eventCell" id="aba-1z-S3R" customClass="EventTableEventCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -76,8 +76,34 @@
                                         <connections>
                                             <outlet property="dateLabel" destination="OCh-o8-ZSF" id="pGk-4o-mHz"/>
                                             <outlet property="locationLabel" destination="bTG-bK-kQT" id="PEJ-Re-X9N"/>
-                                            <segue destination="Xre-WA-XEP" kind="modal" identifier="editQuizSegue" id="vB0-Et-YWo"/>
+                                            <segue destination="Xre-WA-XEP" kind="modal" identifier="editEventSegue" id="vB0-Et-YWo"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="newEventCell" id="edZ-ha-uFt" customClass="EventTableNewEventCell">
+                                        <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UyI-LL-bHs">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                                    <state key="normal" title="    Start a new quiz...">
+                                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <state key="highlighted">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="startNewQuiz:" destination="3P2-ws-jPg" eventType="touchUpInside" id="GdI-HI-Azg"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -237,7 +263,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zdr-yX-ihB" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="uWU-o3-YJj" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="271" y="-1212"/>
+            <point key="canvasLocation" x="271" y="-1206"/>
         </scene>
         <!--Quiz Detail View Controller-->
         <scene sceneID="rFF-Ti-Q9f">
@@ -436,7 +462,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="811" y="-1212"/>
+            <point key="canvasLocation" x="811" y="-1206"/>
         </scene>
         <!--Round Detail View Controller-->
         <scene sceneID="nli-Bd-fTW">
@@ -848,7 +874,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1358" y="-1212"/>
+            <point key="canvasLocation" x="1358" y="-1206"/>
         </scene>
         <!--Create Team View Controller-->
         <scene sceneID="djr-dk-Lvp">
@@ -919,7 +945,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YbC-Zz-rRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="9sz-ez-Nby" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="811" y="-602"/>
+            <point key="canvasLocation" x="811" y="-596"/>
         </scene>
     </scenes>
     <classes>
@@ -929,17 +955,25 @@
                 <relationship kind="outlet" name="teamNameInput" candidateClass="UITextField"/>
             </relationships>
         </class>
-        <class className="EventCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventCell.h"/>
+        <class className="EventListViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventListViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="startNewQuiz"/>
+                <relationship kind="action" name="startNewQuiz:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="EventTableEventCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventTableEventCell.h"/>
             <relationships>
                 <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="locationLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
-        <class className="EventListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventListViewController.h"/>
+        <class className="EventTableNewEventCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EventTableNewEventCell.h"/>
             <relationships>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="createQuizButton" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="HomeScreenViewController" superclassName="UIViewController">
@@ -947,9 +981,7 @@
             <relationships>
                 <relationship kind="action" name="backToInitialView:" candidateClass="UIStoryboardSegue"/>
                 <relationship kind="action" name="startQuizzinPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="uploadAQuizPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="quizButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="uploadButton" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="QuizDetailViewController" superclassName="UIViewController">
